<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_commitreport_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/str_dialog_commit_cont"
            android:textColor="@color/color_text_black_gray"
            android:textSize="21.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="21dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="0dip" >

        <Button
            android:id="@+id/dialog_commitreport_btn_true"
            android:layout_width="0.0dip"
            android:layout_height="46.0dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_btn_dialog_sure_selector"
            android:text="@string/str_dialog_btn_sure"
            android:textColor="@color/white"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/dialog_commitreport_btn_cancel"
            android:layout_width="0dip"
            android:layout_height="46.0dp"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_dialog_cancel_selector"
            android:text="@string/str_dialog_btn_cancel"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </LinearLayout>

</LinearLayout>