<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/exit_layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/transparent"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Button_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/color_bg_btn_next_able"
            android:gravity="center"
            android:text="@string/str_photo_take"
            android:textColor="@color/white"
            android:textSize="18.0sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="#cccdce"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/Button_select_photo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/color_bg_btn_next_able"
            android:gravity="center"
            android:text="@string/str_photo_albumn"
            android:textColor="@color/white"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/Button_cancel"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_bg_btn_next_unable"
            android:gravity="center"
            android:text="@string/str_carrecord_btn_cancel"
            android:textColor="#fff"
            android:textSize="18.0sp" />
    </LinearLayout>

</RelativeLayout>