<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/head"
        layout="@layout/include_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/fragment_activities_qa_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_qa"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/icon_arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/str_qa"
            android:textColor="@color/color_text_black"
            android:textSize="16sp" 
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:contentDescription="@null"
            android:src="@color/color_divier" 
            />

        <TextView
            android:id="@+id/fragment_activities_school_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_school"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/icon_arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/str_school"
            android:textColor="@color/color_text_black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:contentDescription="@null"
            android:src="@color/color_divier" />

        <TextView
            android:id="@+id/fragment_activities_activities_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_activities"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/icon_arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/str_activities_newest"
            android:textColor="@color/color_text_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:background="@color/color_divier" />

        <TextView
            android:id="@+id/fragment_activities_feedback_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_feedback"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/icon_arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/str_feedback"
            android:textColor="@color/color_text_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:background="@color/color_divier" />

        <TextView
            android:id="@+id/fragment_activities_assess_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_assess_car"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/icon_arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/str_mine_price"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:background="@color/color_divier" />
        <TextView
            android:id="@+id/fragment_activities_vin_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_carcheck_vin"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/icon_arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/str_vin_query"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:background="@color/color_divier" />
        <TextView
            android:id="@+id/fragment_activities_pre_carreport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_car_prereport"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/icon_arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/str_car_prereport"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            />
    </LinearLayout>

</LinearLayout>